<resources>
    <string name="appname">CrimeAlert</string>
    <string name="etLogIn">Log In Here</string>
    <string name="tvUser">User Login Form</string>
    <string name="etFname">First name</string>
    <string name="etTouchUpload">Touch the icon below to Upload Evidence video, document, audio or image</string>
    <string name="UploadEvidence">Upload Crime Evidence</string>
    <string name="ReportCrime">Report crime</string>
    <string name="etTypeOfCrime">Type of Crime</string>
    <string name="btnSend">Send</string>
    <string name="etSname">Surname</string>
    <string name="etLogout">Log Out</string>
    <string name="etAge">Age</string>
    <string name="etTelno">Phone no.</string>
    <string name="btnDone">Done</string>
    <string name="tvSuspect">Suspect Form</string>
    <string name="etGender">Gender</string>
    <string name="etPlateNo">Enter plate number</string>
    <string name="tvWitness">Witness Form</string>
    <string name="etModel">Enter Model</string>
    <string name="tvVehicle">Vehicle Form</string>
    <string name="etDescription">Add Description</string>
    <string name="Description">Crime Description</string>
    <string name="tvUserRegistrationForm">User Registration Form</string>
    <string name="etEnterYourFirstName">Enter Your First Name</string>
    <string name="etEnterFirstName">Enter First Name</string>
    <string name="etEnterSurname">Enter Surname</string>
    <string name="etEnterYourLastName">Enter Your Last Name</string>
    <string name="etPhone">Enter phone number</string>
    <string name="etEnterAge">Enter Age in numbers</string>
    <string name="etEmail">Enter Your Email</string>
    <string name="etPassword">Enter Your Password</string>
    <string name="etRegister">Register</string>
    <string name="etRegOrLog">Log In Here</string>
    <string name="etUpload">Upload</string>
    <string name="Carjacking">e.g Car Jacking</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvMissing">Missing Person Form</string>
    <string name="text_size20">20sp</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="sex1">Male</string>
    <string name="sex2">Female</string>
    <string name="textSize16sp">16sp</string>
    <string name="crimetype_e_g_assault">CrimeType e.g Assault</string>
    <string name="other_crime">other crime</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="suspect_form">Suspect Form</string>
    <string name="witness_form">Witness Form</string>
    <string name="vehicle_form">Vehicle Form</string>
    <string name="missing_person_form">Missing Person Form</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="upload_evidence">Evidence Info</string>
    <string name="vehicle_info">Vehicle info</string>
    <string name="log_out">Log Out</string>
    <string name="emergency">Emergency</string>
    <string name="witness_info">Witness info</string>
    <string name="missing_person">Missing Person</string>
    <string name="suspect_info">Suspect info</string>
    <string name="emergency_form">Emergency form</string>
    <string name="submit">Submit</string>
    <string name="dash">Dash Board</string>
    <string name="welcome_to_crime_alert_app">Welcome to Crime Alert App</string>
    <string name="your_one_security_app">Your One security app</string>
    <string name="be_your_neighbors_lookout">Be your Neighbors Lookout</string>
</resources>
