<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:fontFamily="sans-serif-medium"
    tools:context="com.example.andrewsimiyu.crimealert.Witness"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvWitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/tvWitness"
            android:textColor="@color/Aqua"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:ems="14"
            android:layout_margin="4dp"
            android:background="#03DAC6"

            />

        <EditText
            android:id="@+id/etFname"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etEnterFirstName"
            android:inputType="textPersonName"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown"

            />

        <EditText
            android:id="@+id/etSname"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etEnterSurname"
            android:inputType="textPersonName"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etEnterAge"
            android:inputType="number"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown" />

        <EditText
            android:id="@+id/etTelno"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etPhone"
            android:inputType="phone"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown" />

        <RadioGroup
            android:id="@+id/myRadioGroup"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#03DAC6"
            android:checkedButton="@+id/sex"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/sex1"
                android:textColor="@color/Maroon" />

            <RadioButton
                android:id="@+id/Female"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:text="@string/sex2"
                android:textColor="@color/Maroon" />
        </RadioGroup>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="4dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etDescription"
            android:inputType="textPersonName"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView  android:id="@+id/ivAttachment"
                android:layout_width="104dp"
                android:layout_height="59dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_menu_camera"
                tools:ignore="ContentDescription,RtlHardcoded" />
            <Button
                android:id="@+id/btnDone"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/btnDone"
                android:textColor="@color/Black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>