<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.andrewsimiyu.crimealert.Vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingStart="@dimen/left30dp"
    android:fontFamily="sans-serif-medium">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvVehicle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/tvVehicle"
        android:textColor="@color/Aqua"
        android:textSize="20sp"
         />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/ivUpload"
        android:layout_width="92dp"
        android:layout_height="61dp"

        android:layout_marginTop="72dp"
        android:src="@drawable/ic_menu_camera"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <EditText
        android:id="@+id/etPlateNo"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="#03DAC6"
        android:ems="14"
        android:gravity="center"
        android:hint="@string/etPlateNo"
        android:inputType="text|textPhonetic"
        android:textColor="@color/Blue"
        android:textColorHint="@color/saddlebrown" />

    <EditText
        android:id="@+id/etModel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:background="#03DAC6"
        android:ems="14"
        android:gravity="center"
        android:hint="@string/etModel"
        android:inputType="text|textPersonName"
        android:textColor="@color/Blue"
        android:textColorHint="@color/saddlebrown" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#03DAC6"
        android:ems="14"
        android:gravity="center"
        android:hint="@string/etDescription"
        android:inputType="textShortMessage|textPersonName"
        android:textColor="@color/Blue"
        android:textColorHint="@color/saddlebrown"/>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/btnDone"
        /></LinearLayout>
</LinearLayout>