<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:fontFamily="sans-serif-medium"
    tools:context="com.example.andrewsimiyu.crimealert.UserLoginActivity">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/tvUser"
        android:textColor="@color/Aqua"
        android:textSize="20sp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding30dp"
        tools:ignore="RtlSymmetry">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#03DAC6"
            android:ems="14"
            android:gravity="center"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:textColor="@color/Blue"
            android:textColorHint="@color/saddlebrown" />

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/etLogIn" />
    </LinearLayout>
</LinearLayout>
