<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="40dp"
    tools:context="com.example.andrewsimiyu.crimealert.SplashScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_crime_alert_app"
            android:paddingTop="90dp"
            android:textColor="@color/Aqua"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_one_security_app"
            android:paddingTop="90dp"
            android:textColor="@color/Aqua"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be_your_neighbors_lookout"
            android:paddingTop="90dp"
            android:textColor="@color/Aqua"
            android:textSize="20sp"/>
    </LinearLayout>


</LinearLayout>