<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    tools:context="com.example.andrewsimiyu.crimealert.DashboardActivity">

    <TextView
        android:id="@+id/tvSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:gravity="center"
        android:text="@string/logged_in_as"
        android:textColor="@color/White"
        android:textSize="20sp" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/EmailShow"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/tvSuspect"/>

    <ImageButton
        android:id="@+id/ibtnUpload"
        android:layout_width="118dp"
        android:layout_height="71dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/ibtnWitness"
        android:layout_marginBottom="176dp"
        app:srcCompat="@drawable/evidencebtn"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <Button

        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="56dp"
        android:text="@string/etLogout"
        android:textStyle="bold|normal" />

    <ImageButton
        android:id="@+id/ibtnWitness"
        android:layout_width="110dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="77dp"
        android:text="@string/btnDone"
        app:srcCompat="@drawable/witnessbtn"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/ibtnVehicle"
        android:layout_width="104dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignTop="@+id/ibtnWitness"
        app:srcCompat="@drawable/vehiclebtn"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/ibtnSuspect"
        android:layout_width="116dp"
        android:layout_height="71dp"
        android:layout_alignStart="@+id/ibtnWitness"
        android:layout_alignTop="@+id/ibtnMissing"
        app:srcCompat="@drawable/suspect"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/ibtnMissing"
        android:layout_width="111dp"
        android:layout_height="71dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="169dp"
        app:srcCompat="@drawable/misingbtn"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/ibtnEmergency"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="147dp"
        android:layout_marginEnd="19dp"
        app:srcCompat="@drawable/emergencybtn"
        tools:ignore="ContentDescription,RtlHardcoded" />



</RelativeLayout>